[build-system]
requires = [
    "setuptools>=80.4.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project]
name = "mfd-serial"
description = "Module for handling communication via serial port like Universal asynchronous receiver-transmitter (UART)"
requires-python = ">=3.10, <3.14"
version = "1.7.0"
dynamic = ["dependencies"]
license-files = ["LICENSE.md", "AUTHORS.md"]
readme = {file = "README.md", content-type = "text/markdown"}

[project.urls]
Homepage = "https://github.com/intel/mfd"
Repository = "https://github.com/intel/mfd-serial"
Issues = "https://github.com/intel/mfd-serial/issues"
Changelog = "https://github.com/intel/mfd-serial/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
exclude = ["examples", "tests*", "sphinx-doc"]